--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/runtime": "^7.6.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "0.57.0",
+    "prettier": "^2.2.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
