npx mrm lint-staged

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "husky": ">=4",
     "jest": "^24.9.0",
+    "lint-staged": ">=10",
     "metro-react-native-babel-preset": "0.57.0",
     "prettier": "^2.2.0",
     "react-test-renderer": "16.8.6"
@@ -39,5 +41,13 @@
   "youi": {
     "entryFile": "index.youi.js",
     "defaultBundleMode": "remote"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
