Install babel-resolver & set alias for path

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,19 @@
 {
-  "plugins": ["module:@youi/babel-plugin-react-native-youi"]
+  "presets": ["module:metro-react-native-babel-preset"],
+  "plugins": [
+    ["module:@youi/babel-plugin-react-native-youi"],
+    [
+      "module-resolver",
+      {
+        "root": ["./src"],
+        "alias": {
+          "@components": "./src/components",
+          "@containers": "./src/containers",
+          "@redux": "./src/redux",
+          "@services": "./src/services",
+          "@utils": "./src/utils"
+        }
+      }
+    ]
+  ]
 }
