--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "husky": ">=4",
     "jest": "^24.9.0",
     "lint-staged": ">=10",
