--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,8 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
+  "presets": [
+    "module:metro-react-native-babel-preset",
+    "module:react-native-dotenv"
+  ],
   "plugins": [
     ["module:@youi/babel-plugin-react-native-youi"],
     [
