--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint-staged": ">=10",
     "metro-react-native-babel-preset": "0.57.0",
     "prettier": "^2.2.0",
+    "react-native-dotenv": "^2.4.2",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
