--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "module:metro-react-native-babel-preset",
-    "module:react-native-dotenv"
+    "module:metro-react-native-babel-preset"    
   ],
   "plugins": [
+    ["module:react-native-dotenv"],
     ["module:@youi/babel-plugin-react-native-youi"],
     [
       "module-resolver",
