--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native": "0.60.6",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "unsplash-js": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
