--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.60.6",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "unsplash-js": "^7.0.0"
   },
