Add stack navigator

--- a/babel.config.json
+++ b/babel.config.json
@@ -14,7 +14,8 @@
           "@containers": "./src/containers",
           "@redux": "./src/redux",
           "@services": "./src/services",
-          "@utils": "./src/utils"
+          "@utils": "./src/utils",
+          "@navigation": "./src/navigation"
         }
       }
     ]
