--- a/babel.config.json
+++ b/babel.config.json
@@ -10,6 +10,7 @@
       {
         "root": ["./src"],
         "alias": {
+          "@src": "./src",
           "@components": "./src/components",
           "@containers": "./src/containers",
           "@redux": "./src/redux",
