--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@youi/react-native-youi": "6.1.0",
     "react": "16.8.6",
     "react-native": "0.60.6",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^2.15.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
