--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
     "@youi/babel-plugin-react-native-youi": "1.0.4",
     "@youi/react-native-youi": "6.1.0",
     "react": "16.8.6",
     "react-native": "0.60.6",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-reanimated": "^1.13.2",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^2.15.0",
+    "react-native-screens": "1.0.0-alpha.23",
+    "react-navigation": "4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
